# jsonly

./: .gitignore  README.md  dynamic_model.py  index.html  mkdocs.yml  nbtest_structured.ipynb  package-lock.json  package.json  pyproject.toml  test_summarize.py
.github/workflows/: fly-deploy.yml
backend/: main.py  structure.py
docs/: create_template_modal_plan.md  endpoints.md  firebase_collections.md  frontend_components.md  frontend_structure.md  index.md  pricing.md  project_summary.md  usage_page_plan.md
endpoints/: index.html
frontend/: analyze_with_template.postman_collection.json  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthModal.tsx  CreateTemplateModal.tsx  FileUploadSection.tsx  FileUploader.tsx  FirestoreWriteTest.tsx  Header.tsx  JsonViewer.tsx  Sidebar.tsx  SignUpWithEmailFixed.tsx
frontend/src/context/: AppContext.tsx  AppContextFixed.tsx
frontend/src/pages/: BillingPage.tsx  CredentialsPage.tsx  HomePage.tsx  SubscriptionPage.tsx  TemplatePage.tsx
frontend/src/services/: api.ts  firebase.ts
jsonly-backend/: Dockerfile  README.md  app.py  fly.toml  pyproject.toml  structure.py  test_end2end.py  test_read_schema.py  test_structure_with_schema.py  test_write_schema.py
jsonly-frontend/: analyze_with_template.postman_collection.json  index.html  package-lock.json  package.json
jsonly-frontend/src/: App.tsx
jsonly-frontend/src/components/: CreateTemplateModal.tsx  (+6 more)
site/: 404.html
site/endpoints/: index.html
site/search/: search_index.json
(+10 files in other folders)
